property from application.properties overriding in @TestPropertySource#locations file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=spring-properties-testPropertySource
 
+# @TestPropertySource#locations
+local.prop0=local_prop0 from application.properties
+
 # @TestPropertySource#properties
 local.prop1=local_prop1 from application.properties
 local.prop2=local_prop2 from application.properties
