--- a/src/test/resources/test_messages.properties
+++ b/src/test/resources/test_messages.properties
@@ -1,3 +1,5 @@
 tm.prop1 = tm.prop1 from test_messages.properties
 tm.prop2 = tm.prop2 from test_messages.properties
 tm.prop3 = tm.prop3 from test_messages.properties
+
+local.prop0=local_prop0 from test_messages.properties
